<resources>
    <string name="app_name">Telegram</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings_default_username">Mikhail Pushkarev</string>
    <string name="setting_default_set">в сети</string>
    <string name="setting_text_account">Аккаунт</string>
    <string name="settings_text_number">+7–910–398-35-34</string>
    <string name="settimgs_update_number">Нажмите, чтобы изменить номер телефона</string>
    <string name="settings_email">Mikhail Pushkarev</string>
    <string name="settings_email_text">Имя пользователя</string>
    <string name="sttings_bio">О себе</string>
    <string name="settings_bio_lable">Напишите немного о себе</string>
    <string name="settings_menu_change_update_name">Изменить имя</string>
    <string name="settings_exit_action">Выход</string>
    <string name="imageid_register_number">imageId_register_number</string>
    <string name="input_number_code">Введите код</string>
    <string name="question_number_register">Мы отправили SMS с кодом проверки на ваш телефон +7-900-000-00-00</string>
    <string name="six_number_hint">-- -- -- -- -- --</string>
    <string name="register_title_phone">Ваш телефон</string>
    <string name="register_toast_text">Введите номер телефона</string>
    <string name="enter_phone_hint">-- -- -- -- -- -- -- -- -- -- --</string>
    <string name="settings_name_hint">Имя</string>
    <string name="settings_hint_surname">Фамилия</string>
    <string name="settings_name_isEmpty">Имя не может быть пустым!</string>
    <string name="settings_toast_FIO">Введеные вами данные изменены!</string>
    <string name="settings_hint_input_username">Имя пользователя</string>
    <string name="settings_bio">Описание</string>
    <string name="clear_chat_menu">Очистить чат</string>
    <string name="delete_chat_menu">Удалить чат</string>
</resources>